[project]
name = "rag-database-routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.7",
    "duckduckgo-search>=6.4,<6.5",
    "google-genai>=1.61.0",
    "google-generativeai>=0.8.6",
    "langchain==0.3.12",
    "langchain-community==0.3.12",
    "langchain-core==0.3.28",
    "langchain-google-genai>=2.0.9",
    "langchain-openai==0.2.14",
    "langgraph==0.2.53",
    "pypdf>=4.0.0",
    "qdrant-client==1.12.1",
    "sentence-transformers>=2.2.2",
    "streamlit>=1.29.0",
]
